# serde-yaml

./: Cargo.toml
.gitea/workflows/: main.yaml
fuzz/: Cargo.toml
src/: lib.rs  mapping.rs  number.rs  ser.rs
tests/: test_de.rs  test_error.rs  test_serde.rs
