[package]
name = "serde_yaml"
version = "0.8.26" # remember to update html_root_url, and readme for major versions
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
description = "YAML support for Serde"
repository = "https://github.com/dtolnay/serde-yaml"
documentation = "https://docs.rs/serde_yaml/"
readme = "README.md"
keywords = ["yaml", "serde"]
categories = ["encoding"]

[dependencies]
ryu = "1.0.17"
indexmap = { version = "2.2.6", features = ["std"] }
serde = "1.0.199"
yaml-rust = "0.4.5"

[dev-dependencies]
anyhow = "1.0.82"
indoc = "2.0.5"
serde_derive = "1.0.199"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
